--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,11 @@
 	font-weight: 400;
 	font-style: normal;
 }
+.prose img {
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 5px;
+}
+.home-name {
+	fomt-size: 150px;
+}
